tests/sksl/errors/golden/OpenArray.glsl
### Compilation failed:

void main(inout float4 color) { color.r[ = ( color.g ); }


### Errors:
error: 1: expected expression, but found '='
1 error
